# sefaria-ai

./: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: deploy.yml
.streamlit/: config.toml
sefaria_ai/: main.py
